[package]
name = "discord-help-bot"
version = "0.1.0"
authors = ["Kondziowy <konrad.brodzik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", 
"rustls_backend"], version = "0.9.0-rc.2"}
reqwest = { version = "0.10", features = ["blocking"] }
select = {version = "0.5"}
rand = "0.8.0"
hyper = {version = "0.13.9"}